updated to Ben's page

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
 
-<h1>Batcave</h1>
-<p>This is the secret headquarters of Batman</p>
+<h1>Ben Rice</h1>
+<p>Comedian Ben Rice will soon have a new page.</p>
 
 </body>
 </html>
