--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -51,7 +51,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </article>
 </section>
 
-<section>
+<section class="afterbox">
 <h2>ASIDE 2</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
